# nokia_unit_tests

./: .gitignore  Dockerfile  FIXED_BUGS.md  README.md  WALKTHROUGH.md  main.py  pyproject.toml  ruff.toml
epc/: api.py  db.py  models.py  traffic.py
tests/api/: conftest.py  test_add_bearer.py  test_attach_ue.py  test_delete_bearer.py  test_detach_ue.py  test_get_traffic_stats.py  test_get_ue.py  test_get_ues_stats.py  test_list_ues.py  test_reset_all.py  test_start_traffic.py  test_stop_traffic.py  test_stop_ue_traffic.py
tests/api_contract/: conftest.py  test_response.py  test_routing.py  test_status_codes.py  test_validation_422.py
tests/models/: conftest.py  test_add_bearer_request.py  test_attach_ue_request.py  test_bearer_config.py  test_response_schemas.py  test_start_traffic_request.py  test_throughput_stats.py  test_ue_state.py
tests/repo/: conftest.py  test_add_bearer.py  test_attach_ue.py  test_delete_bearer.py  test_detach_ue.py  test_get_ue.py  test_list_ues.py  test_persistence.py  test_reset_all.py  test_ue_exists.py  test_update_bearer.py  test_update_stats.py
