[project]
name = "epc_simulator"
version = "0.1.0"
description = "Simple EPC simulator with FastAPI and SQLite"
authors = [ { name = "Author", email = "author@example.com" } ]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
	"fastapi>=0.110.0,<0.111.0",
	"uvicorn>=0.29.0,<0.30.0",
]

[dependency-groups]
dev = [
	"pytest>=7.4.0,<8.0.0",
	"httpx>=0.27.0,<0.28.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
